ICG/y.output
Terminals unused in grammar

   FOR
   CASE
   DEFAULT
   DOT
   COLON
   NOT
   BNOT
   "then"
   MOD


State 6 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 153 conflicts: 1 shift/reduce
State 204 conflicts: 1 shift/reduce


Grammar

    0 $accept: START $end

    1 START: START DEC0 SEMICOLON
    2      | START FUNC_DEC SEMICOLON
    3      | START FUNC_DEF
    4      | SEMICOLON
    5      | %empty

    6 STATEMENT_BLOCK: STATEMENT_BLOCK STATEMENT
    7                | STATEMENT

    8 STATEMENT: EXPR0 SEMICOLON
    9          | DEC0 SEMICOLON
   10          | IF_CONS
   11          | WHILE_LOOP
   12          | DO_WHILE
   13          | L_BRACE STATEMENT_BLOCK R_BRACE
   14          | L_BRACE R_BRACE
   15          | RETURN EXPR1 SEMICOLON
   16          | RETURN SEMICOLON
   17          | BREAK SEMICOLON
   18          | SEMICOLON

   19 $@1: %empty

   20 $@2: %empty

   21 IF_CONS: IF L_PAREN EXPR0 R_PAREN $@1 STATEMENT $@2 ELSE_STATEMENT

   22 ELSE_STATEMENT: ELSE STATEMENT
   23               | %empty

   24 WHILE_LOOP: WHILE L_PAREN EXPR0 R_PAREN STATEMENT

   25 DO_WHILE: DO STATEMENT WHILE L_PAREN EXPR0 R_PAREN SEMICOLON

   26 FUNC_DEC: CHAR IDENTIFIER L_PAREN FUNC_PARAMS R_PAREN
   27         | NUM_TYPE IDENTIFIER L_PAREN FUNC_PARAMS R_PAREN
   28         | VOID IDENTIFIER L_PAREN FUNC_PARAMS R_PAREN

   29 FUNC_DEF: FUNC_DEC L_BRACE STATEMENT_BLOCK R_BRACE

   30 FUNC_PARAMS: FUNC_PARAMS1
   31            | %empty

   32 FUNC_PARAMS1: NUM_TYPE IDENTIFIER COMMA FUNC_PARAMS1
   33             | CHAR IDENTIFIER COMMA FUNC_PARAMS1
   34             | NUM_TYPE IDENTIFIER
   35             | CHAR IDENTIFIER

   36 FUNC_CALL: IDENTIFIER L_PAREN FUNC_LIST R_PAREN
   37          | IDENTIFIER L_PAREN R_PAREN

   38 FUNC_LIST: EXPR1
   39          | CONST_STR
   40          | EXPR1 COMMA FUNC_LIST
   41          | CONST_CHAR COMMA FUNC_LIST
   42          | CONST_STR COMMA FUNC_LIST

   43 DEC0: NUM_TYPE DEC1
   44     | CHR_TYPE DEC1

   45 CHR_TYPE: CHAR

   46 DEC1: DEC1 COMMA DEC2
   47     | DEC2

   48 DEC2: IDENTIFIER EQUAL EXPR1
   49     | DEC_ARR EQUAL L_BRACE EXPR0 R_BRACE
   50     | DEC_ARR
   51     | IDENTIFIER

   52 DEC_ARR: IDENTIFIER L_SQ_BRACE CONST_INT R_SQ_BRACE

   53 ARR: IDENTIFIER L_SQ_BRACE CONST_INT R_SQ_BRACE
   54    | IDENTIFIER L_SQ_BRACE EXPR0 R_SQ_BRACE

   55 EXPR0: EXPR0 COMMA EXPR1
   56      | EXPR1

   57 EXPR1: LVAL EQUAL EXPR1
   58      | LVAL PEQUAL EXPR1
   59      | LVAL MEQUAL EXPR1
   60      | LVAL SEQUAL EXPR1
   61      | LVAL BEQUAL EXPR1
   62      | EXPR1G

   63 EXPR1G: EXPR1G OR EXPR1F
   64       | EXPR1F

   65 EXPR1F: EXPR1F AND EXPR1E
   66       | EXPR1E

   67 EXPR1E: EXPR1E BOR EXPR1D
   68       | EXPR1D

   69 EXPR1D: EXPR1D CARROT EXPR1C
   70       | EXPR1C

   71 EXPR1C: EXPR1C BAND EXPR1B
   72       | EXPR1B

   73 EXPR1B: EXPR1B EQUALITY EXPR1A
   74       | EXPR1B NEQUAL EXPR1A
   75       | EXPR1A

   76 EXPR1A: EXPR1A GREAT EXPR2
   77       | EXPR1A LESS EXPR2
   78       | EXPR1A EGREAT EXPR2
   79       | EXPR1A ELESS EXPR2
   80       | EXPR2

   81 EXPR2: EXPR2 PLUS EXPR3
   82      | EXPR2 MINUS EXPR3
   83      | EXPR3

   84 EXPR3: EXPR3 MULTIPLY EXPR3A
   85      | EXPR3 DIVIDE EXPR3A
   86      | EXPR3A

   87 EXPR3A: INCR LVAL
   88       | DECR LVAL
   89       | PLUS EXPR4
   90       | MINUS EXPR4
   91       | BAND LVAL
   92       | FUNC_CALL
   93       | EXPR4

   94 EXPR4: L_PAREN EXPR0 R_PAREN
   95      | LVAL INCR
   96      | LVAL DECR
   97      | NUM
   98      | LVAL
   99      | L_PAREN NUM_TYPE R_PAREN

  100 LVAL: IDENTIFIER
  101     | ARR
  102     | L_PAREN LVAL R_PAREN

  103 NUM: CONST_FLOAT
  104    | CONST_INT
  105    | CONST_CHAR

  106 NUM_TYPE: INT
  107         | FLOAT
  108         | SIGNED INT
  109         | SIGNED FLOAT
  110         | UNSIGNED INT
  111         | UNSIGNED FLOAT


Terminals, with rules where they appear

$end (0) 0
error (256)
RETURN (258) 15 16
BREAK (259) 17
UNSIGNED (260) 110 111
SIGNED (261) 108 109
DO (262) 25
WHILE (263) 24 25
FOR (264)
IF (265) 21
ELSE (266) 22
CASE (267)
DEFAULT (268)
L_BRACE (269) 13 14 29 49
R_BRACE (270) 13 14 29 49
L_SQ_BRACE (271) 52 53 54
R_SQ_BRACE (272) 52 53 54
L_PAREN (273) 21 24 25 26 27 28 36 37 94 99 102
R_PAREN (274) 21 24 25 26 27 28 36 37 94 99 102
DOT (275)
SEMICOLON (276) 1 2 4 8 9 15 16 17 18 25
COLON (277)
INCR (278) 87 95
DECR (279) 88 96
NOT (280)
BNOT (281)
"then" (282)
MULTIPLY (283) 84
DIVIDE (284) 85
MOD (285)
PLUS (286) 81 89
MINUS (287) 82 90
GREAT (288) 76
LESS (289) 77
EGREAT (290) 78
ELESS (291) 79
EQUALITY (292) 73
NEQUAL (293) 74
BAND (294) 71 91
CARROT (295) 69
BOR (296) 67
AND (297) 65
OR (298) 63
EQUAL (299) 48 49 57
PEQUAL (300) 58
MEQUAL (301) 59
SEQUAL (302) 60
BEQUAL (303) 61
COMMA (304) 32 33 40 41 42 46 55
CHAR (305) 26 33 35 45
FLOAT (306) 107 109 111
VOID (307) 28
INT (308) 106 108 110
IDENTIFIER (309) 26 27 28 32 33 34 35 36 37 48 51 52 53 54 100
CONST_FLOAT (310) 103
CONST_INT (311) 52 53 104
CONST_CHAR (312) 41 105
CONST_STR (313) 39 42


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
START (60)
    on left: 1 2 3 4 5, on right: 0 1 2 3
STATEMENT_BLOCK (61)
    on left: 6 7, on right: 6 13 29
STATEMENT (62)
    on left: 8 9 10 11 12 13 14 15 16 17 18, on right: 6 7 21 22 24
    25
IF_CONS (63)
    on left: 21, on right: 10
$@1 (64)
    on left: 19, on right: 21
$@2 (65)
    on left: 20, on right: 21
ELSE_STATEMENT (66)
    on left: 22 23, on right: 21
WHILE_LOOP (67)
    on left: 24, on right: 11
DO_WHILE (68)
    on left: 25, on right: 12
FUNC_DEC (69)
    on left: 26 27 28, on right: 2 29
FUNC_DEF (70)
    on left: 29, on right: 3
FUNC_PARAMS (71)
    on left: 30 31, on right: 26 27 28
FUNC_PARAMS1 (72)
    on left: 32 33 34 35, on right: 30 32 33
FUNC_CALL (73)
    on left: 36 37, on right: 92
FUNC_LIST (74)
    on left: 38 39 40 41 42, on right: 36 40 41 42
DEC0 (75)
    on left: 43 44, on right: 1 9
CHR_TYPE (76)
    on left: 45, on right: 44
DEC1 (77)
    on left: 46 47, on right: 43 44 46
DEC2 (78)
    on left: 48 49 50 51, on right: 46 47
DEC_ARR (79)
    on left: 52, on right: 49 50
ARR (80)
    on left: 53 54, on right: 101
EXPR0 (81)
    on left: 55 56, on right: 8 21 24 25 49 54 55 94
EXPR1 (82)
    on left: 57 58 59 60 61 62, on right: 15 38 40 48 55 56 57 58 59
    60 61
EXPR1G (83)
    on left: 63 64, on right: 62 63
EXPR1F (84)
    on left: 65 66, on right: 63 64 65
EXPR1E (85)
    on left: 67 68, on right: 65 66 67
EXPR1D (86)
    on left: 69 70, on right: 67 68 69
EXPR1C (87)
    on left: 71 72, on right: 69 70 71
EXPR1B (88)
    on left: 73 74 75, on right: 71 72 73 74
EXPR1A (89)
    on left: 76 77 78 79 80, on right: 73 74 75 76 77 78 79
EXPR2 (90)
    on left: 81 82 83, on right: 76 77 78 79 80 81 82
EXPR3 (91)
    on left: 84 85 86, on right: 81 82 83 84 85
EXPR3A (92)
    on left: 87 88 89 90 91 92 93, on right: 84 85 86
EXPR4 (93)
    on left: 94 95 96 97 98 99, on right: 89 90 93
LVAL (94)
    on left: 100 101 102, on right: 57 58 59 60 61 87 88 91 95 96 98
    102
NUM (95)
    on left: 103 104 105, on right: 97
NUM_TYPE (96)
    on left: 106 107 108 109 110 111, on right: 27 32 34 43 99


State 0

    0 $accept: . START $end

    SEMICOLON  shift, and go to state 1

    $default  reduce using rule 5 (START)

    START  go to state 2


State 1

    4 START: SEMICOLON .

    $default  reduce using rule 4 (START)


State 2

    0 $accept: START . $end
    1 START: START . DEC0 SEMICOLON
    2      | START . FUNC_DEC SEMICOLON
    3      | START . FUNC_DEF

    $end      shift, and go to state 3
    UNSIGNED  shift, and go to state 4
    SIGNED    shift, and go to state 5
    CHAR      shift, and go to state 6
    FLOAT     shift, and go to state 7
    VOID      shift, and go to state 8
    INT       shift, and go to state 9

    FUNC_DEC  go to state 10
    FUNC_DEF  go to state 11
    DEC0      go to state 12
    CHR_TYPE  go to state 13
    NUM_TYPE  go to state 14


State 3

    0 $accept: START $end .

    $default  accept


State 4

  110 NUM_TYPE: UNSIGNED . INT
  111         | UNSIGNED . FLOAT

    FLOAT  shift, and go to state 15
    INT    shift, and go to state 16


State 5

  108 NUM_TYPE: SIGNED . INT
  109         | SIGNED . FLOAT

    FLOAT  shift, and go to state 17
    INT    shift, and go to state 18


State 6

   26 FUNC_DEC: CHAR . IDENTIFIER L_PAREN FUNC_PARAMS R_PAREN
   45 CHR_TYPE: CHAR .

    IDENTIFIER  shift, and go to state 19

    IDENTIFIER  [reduce using rule 45 (CHR_TYPE)]


State 7

  107 NUM_TYPE: FLOAT .

    $default  reduce using rule 107 (NUM_TYPE)


State 8

   28 FUNC_DEC: VOID . IDENTIFIER L_PAREN FUNC_PARAMS R_PAREN

    IDENTIFIER  shift, and go to state 20


State 9

  106 NUM_TYPE: INT .

    $default  reduce using rule 106 (NUM_TYPE)


State 10

    2 START: START FUNC_DEC . SEMICOLON
   29 FUNC_DEF: FUNC_DEC . L_BRACE STATEMENT_BLOCK R_BRACE

    L_BRACE    shift, and go to state 21
    SEMICOLON  shift, and go to state 22


State 11

    3 START: START FUNC_DEF .

    $default  reduce using rule 3 (START)


State 12

    1 START: START DEC0 . SEMICOLON

    SEMICOLON  shift, and go to state 23


State 13

   44 DEC0: CHR_TYPE . DEC1

    IDENTIFIER  shift, and go to state 24

    DEC1     go to state 25
    DEC2     go to state 26
    DEC_ARR  go to state 27


State 14

   27 FUNC_DEC: NUM_TYPE . IDENTIFIER L_PAREN FUNC_PARAMS R_PAREN
   43 DEC0: NUM_TYPE . DEC1

    IDENTIFIER  shift, and go to state 28

    DEC1     go to state 29
    DEC2     go to state 26
    DEC_ARR  go to state 27


State 15

  111 NUM_TYPE: UNSIGNED FLOAT .

    $default  reduce using rule 111 (NUM_TYPE)


State 16

  110 NUM_TYPE: UNSIGNED INT .

    $default  reduce using rule 110 (NUM_TYPE)


State 17

  109 NUM_TYPE: SIGNED FLOAT .

    $default  reduce using rule 109 (NUM_TYPE)


State 18

  108 NUM_TYPE: SIGNED INT .

    $default  reduce using rule 108 (NUM_TYPE)


State 19

   26 FUNC_DEC: CHAR IDENTIFIER . L_PAREN FUNC_PARAMS R_PAREN

    L_PAREN  shift, and go to state 30


State 20

   28 FUNC_DEC: VOID IDENTIFIER . L_PAREN FUNC_PARAMS R_PAREN

    L_PAREN  shift, and go to state 31


State 21

   29 FUNC_DEF: FUNC_DEC L_BRACE . STATEMENT_BLOCK R_BRACE

    RETURN       shift, and go to state 32
    BREAK        shift, and go to state 33
    UNSIGNED     shift, and go to state 4
    SIGNED       shift, and go to state 5
    DO           shift, and go to state 34
    WHILE        shift, and go to state 35
    IF           shift, and go to state 36
    L_BRACE      shift, and go to state 37
    L_PAREN      shift, and go to state 38
    SEMICOLON    shift, and go to state 39
    INCR         shift, and go to state 40
    DECR         shift, and go to state 41
    PLUS         shift, and go to state 42
    MINUS        shift, and go to state 43
    BAND         shift, and go to state 44
    CHAR         shift, and go to state 45
    FLOAT        shift, and go to state 7
    INT          shift, and go to state 9
    IDENTIFIER   shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_CHAR   shift, and go to state 49

    STATEMENT_BLOCK  go to state 50
    STATEMENT        go to state 51
    IF_CONS          go to state 52
    WHILE_LOOP       go to state 53
    DO_WHILE         go to state 54
    FUNC_CALL        go to state 55
    DEC0             go to state 56
    CHR_TYPE         go to state 13
    ARR              go to state 57
    EXPR0            go to state 58
    EXPR1            go to state 59
    EXPR1G           go to state 60
    EXPR1F           go to state 61
    EXPR1E           go to state 62
    EXPR1D           go to state 63
    EXPR1C           go to state 64
    EXPR1B           go to state 65
    EXPR1A           go to state 66
    EXPR2            go to state 67
    EXPR3            go to state 68
    EXPR3A           go to state 69
    EXPR4            go to state 70
    LVAL             go to state 71
    NUM              go to state 72
    NUM_TYPE         go to state 73


State 22

    2 START: START FUNC_DEC SEMICOLON .

    $default  reduce using rule 2 (START)


State 23

    1 START: START DEC0 SEMICOLON .

    $default  reduce using rule 1 (START)


State 24

   48 DEC2: IDENTIFIER . EQUAL EXPR1
   51     | IDENTIFIER .
   52 DEC_ARR: IDENTIFIER . L_SQ_BRACE CONST_INT R_SQ_BRACE

    L_SQ_BRACE  shift, and go to state 74
    EQUAL       shift, and go to state 75

    $default  reduce using rule 51 (DEC2)


State 25

   44 DEC0: CHR_TYPE DEC1 .
   46 DEC1: DEC1 . COMMA DEC2

    COMMA  shift, and go to state 76

    $default  reduce using rule 44 (DEC0)


State 26

   47 DEC1: DEC2 .

    $default  reduce using rule 47 (DEC1)


State 27

   49 DEC2: DEC_ARR . EQUAL L_BRACE EXPR0 R_BRACE
   50     | DEC_ARR .

    EQUAL  shift, and go to state 77

    $default  reduce using rule 50 (DEC2)


State 28

   27 FUNC_DEC: NUM_TYPE IDENTIFIER . L_PAREN FUNC_PARAMS R_PAREN
   48 DEC2: IDENTIFIER . EQUAL EXPR1
   51     | IDENTIFIER .
   52 DEC_ARR: IDENTIFIER . L_SQ_BRACE CONST_INT R_SQ_BRACE

    L_SQ_BRACE  shift, and go to state 74
    L_PAREN     shift, and go to state 78
    EQUAL       shift, and go to state 75

    $default  reduce using rule 51 (DEC2)


State 29

   43 DEC0: NUM_TYPE DEC1 .
   46 DEC1: DEC1 . COMMA DEC2

    COMMA  shift, and go to state 76

    $default  reduce using rule 43 (DEC0)


State 30

   26 FUNC_DEC: CHAR IDENTIFIER L_PAREN . FUNC_PARAMS R_PAREN

    UNSIGNED  shift, and go to state 4
    SIGNED    shift, and go to state 5
    CHAR      shift, and go to state 79
    FLOAT     shift, and go to state 7
    INT       shift, and go to state 9

    $default  reduce using rule 31 (FUNC_PARAMS)

    FUNC_PARAMS   go to state 80
    FUNC_PARAMS1  go to state 81
    NUM_TYPE      go to state 82


State 31

   28 FUNC_DEC: VOID IDENTIFIER L_PAREN . FUNC_PARAMS R_PAREN

    UNSIGNED  shift, and go to state 4
    SIGNED    shift, and go to state 5
    CHAR      shift, and go to state 79
    FLOAT     shift, and go to state 7
    INT       shift, and go to state 9

    $default  reduce using rule 31 (FUNC_PARAMS)

    FUNC_PARAMS   go to state 83
    FUNC_PARAMS1  go to state 81
    NUM_TYPE      go to state 82


State 32

   15 STATEMENT: RETURN . EXPR1 SEMICOLON
   16          | RETURN . SEMICOLON

    L_PAREN      shift, and go to state 38
    SEMICOLON    shift, and go to state 84
    INCR         shift, and go to state 40
    DECR         shift, and go to state 41
    PLUS         shift, and go to state 42
    MINUS        shift, and go to state 43
    BAND         shift, and go to state 44
    IDENTIFIER   shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_CHAR   shift, and go to state 49

    FUNC_CALL  go to state 55
    ARR        go to state 57
    EXPR1      go to state 85
    EXPR1G     go to state 60
    EXPR1F     go to state 61
    EXPR1E     go to state 62
    EXPR1D     go to state 63
    EXPR1C     go to state 64
    EXPR1B     go to state 65
    EXPR1A     go to state 66
    EXPR2      go to state 67
    EXPR3      go to state 68
    EXPR3A     go to state 69
    EXPR4      go to state 70
    LVAL       go to state 71
    NUM        go to state 72


State 33

   17 STATEMENT: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 86


State 34

   25 DO_WHILE: DO . STATEMENT WHILE L_PAREN EXPR0 R_PAREN SEMICOLON

    RETURN       shift, and go to state 32
    BREAK        shift, and go to state 33
    UNSIGNED     shift, and go to state 4
    SIGNED       shift, and go to state 5
    DO           shift, and go to state 34
    WHILE        shift, and go to state 35
    IF           shift, and go to state 36
    L_BRACE      shift, and go to state 37
    L_PAREN      shift, and go to state 38
    SEMICOLON    shift, and go to state 39
    INCR         shift, and go to state 40
    DECR         shift, and go to state 41
    PLUS         shift, and go to state 42
    MINUS        shift, and go to state 43
    BAND         shift, and go to state 44
    CHAR         shift, and go to state 45
    FLOAT        shift, and go to state 7
    INT          shift, and go to state 9
    IDENTIFIER   shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_CHAR   shift, and go to state 49

    STATEMENT   go to state 87
    IF_CONS     go to state 52
    WHILE_LOOP  go to state 53
    DO_WHILE    go to state 54
    FUNC_CALL   go to state 55
    DEC0        go to state 56
    CHR_TYPE    go to state 13
    ARR         go to state 57
    EXPR0       go to state 58
    EXPR1       go to state 59
    EXPR1G      go to state 60
    EXPR1F      go to state 61
    EXPR1E      go to state 62
    EXPR1D      go to state 63
    EXPR1C      go to state 64
    EXPR1B      go to state 65
    EXPR1A      go to state 66
    EXPR2       go to state 67
    EXPR3       go to state 68
    EXPR3A      go to state 69
    EXPR4       go to state 70
    LVAL        go to state 71
    NUM         go to state 72
    NUM_TYPE    go to state 73


State 35

   24 WHILE_LOOP: WHILE . L_PAREN EXPR0 R_PAREN STATEMENT

    L_PAREN  shift, and go to state 88


State 36

   21 IF_CONS: IF . L_PAREN EXPR0 R_PAREN $@1 STATEMENT $@2 ELSE_STATEMENT

    L_PAREN  shift, and go to state 89


State 37

   13 STATEMENT: L_BRACE . STATEMENT_BLOCK R_BRACE
   14          | L_BRACE . R_BRACE

    RETURN       shift, and go to state 32
    BREAK        shift, and go to state 33
    UNSIGNED     shift, and go to state 4
    SIGNED       shift, and go to state 5
    DO           shift, and go to state 34
    WHILE        shift, and go to state 35
    IF           shift, and go to state 36
    L_BRACE      shift, and go to state 37
    R_BRACE      shift, and go to state 90
    L_PAREN      shift, and go to state 38
    SEMICOLON    shift, and go to state 39
    INCR         shift, and go to state 40
    DECR         shift, and go to state 41
    PLUS         shift, and go to state 42
    MINUS        shift, and go to state 43
    BAND         shift, and go to state 44
    CHAR         shift, and go to state 45
    FLOAT        shift, and go to state 7
    INT          shift, and go to state 9
    IDENTIFIER   shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_CHAR   shift, and go to state 49

    STATEMENT_BLOCK  go to state 91
    STATEMENT        go to state 51
    IF_CONS          go to state 52
    WHILE_LOOP       go to state 53
    DO_WHILE         go to state 54
    FUNC_CALL        go to state 55
    DEC0             go to state 56
    CHR_TYPE         go to state 13
    ARR              go to state 57
    EXPR0            go to state 58
    EXPR1            go to state 59
    EXPR1G           go to state 60
    EXPR1F           go to state 61
    EXPR1E           go to state 62
    EXPR1D           go to state 63
    EXPR1C           go to state 64
    EXPR1B           go to state 65
    EXPR1A           go to state 66
    EXPR2            go to state 67
    EXPR3            go to state 68
    EXPR3A           go to state 69
    EXPR4            go to state 70
    LVAL             go to state 71
    NUM              go to state 72
    NUM_TYPE         go to state 73


State 38

   94 EXPR4: L_PAREN . EXPR0 R_PAREN
   99      | L_PAREN . NUM_TYPE R_PAREN
  102 LVAL: L_PAREN . LVAL R_PAREN

    UNSIGNED     shift, and go to state 4
    SIGNED       shift, and go to state 5
    L_PAREN      shift, and go to state 38
    INCR         shift, and go to state 40
    DECR         shift, and go to state 41
    PLUS         shift, and go to state 42
    MINUS        shift, and go to state 43
    BAND         shift, and go to state 44
    FLOAT        shift, and go to state 7
    INT          shift, and go to state 9
    IDENTIFIER   shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
